# metamodule-plugin-examples

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  release.sh
.github/workflows/: build_release.yml
Airwindows/: CMakeLists.txt  airwin_modules.cc  module.hh  module_creator.hh  plugin-mm.json
Airwindows/asset-sources/: artwork-ideas.ai  main_knob.psd  slider-bg.psd  slider-handle.psd  slider-handle2.psd
Airwindows/cmrc/: cmrc.hpp
Airwindows/tests/: Makefile  string2db_tests.cc  string2float_tests.cc
AudibleInstruments/: CMakeLists.txt
BaconMusic/: BaconMusic.cpp  CMakeLists.txt
Befaco/: CMakeLists.txt
Bogaudio/: CMakeLists.txt  plugin-mm.json
Bogaudio/Bogaudio-test-patches/: Bogaudio_PEQ6.vcv  Bogaudio_PEQ6.yml  Bogaudio_VCO.vcv  Bogaudio_VCO.yml  Bogaudio_XCO.vcv  Bogaudio_XCO.yml  Bogaudio_misc.vcv  Bogaudio_misc2.yml
Bogaudio/src/: mutex-stub.hh
ChowDSP/: CMakeLists.txt  plugin-mm.json
CosineKitty-Sapphire/: CMakeLists.txt  plugin-mm.json  plugin.cpp
CountModula/: CMakeLists.txt  CountModula.cpp  plugin-mm.json
Fundamental/: CMakeLists.txt  plugin.cpp  quant.cc  quant.hh
Geodesics/: CMakeLists.txt  Geodesics.cpp  plugin-mm.json
Impromptu/: CMakeLists.txt  plugin-mm.json  plugin.cpp
ImpromptuModular/: CMakeLists.txt  plugin.cpp
NANO/: CMakeLists.txt  plugin-mm.json
NANO/NANO patches/: CEQ.vcv  FONT.yml  MIXER.yml  NANOOscSequence.vcv  QUART.vcv  RANDOM.vcv  ST-MAR.vcv  ST_MAR.yml
NANOModules/: CMakeLists.txt  README.md  plugin-mm.json  plugin.cpp
NANOModules/NANO patches/: ALT.vcv  ALT.yml  CEQ.yml  FONT.vcv  MAR.vcv  MAR.yml  MIXER.vcv  NANOOscSequence.yml  ONA.vcv  ONA.yml  QUART.yml  RANDOM.yml  SIERRA.vcv  SIERRA.yml  ThreeVoices.vcv  ThreeVoices.yml
NativeExample/: CMakeLists.txt  plugin-mm.json  plugin.cc  plugin.json  simple_gain.cc  simple_gain.hh  simple_gain_elements.cc
OrangeLine/: CMakeLists.txt  OrangeLine.cpp  plugin-mm.json
Prism/: CMakeLists.txt  plugin.cpp
RebelTech/: CMakeLists.txt  plugin-mm.json  plugin.cpp
SVModular/: CMakeLists.txt  DrumKit.cpp  plugin-mm.json
Sapphire/: CMakeLists.txt  Sapphire.cpp  firmware-stubs.cc  plugin-mm.json  plugin.cpp
Squinky/: CMakeLists.txt  SquinkyLabs.cpp  plugin-mm.json
VCV-Fundamental/: CMakeLists.txt  plugin-mm.json  plugin.cpp  quant-scales.hh  quant.cc  quant.hh  quant_info.hh
VCV-Fundamental/artwork-source/: quant.ai
Valley/: CMakeLists.txt  Valley.cpp  plugin-mm.json
Valley/Valley-patches/: Amalgam.vcv  Amalgam.yml  Feline.vcv  Feline.yml  Interzone.vcv  Interzone.yml  Plateau.vcv  Plateau.yml  Topograph.vcv  Topograph.yml  uGraph.vcv  uGraph.yml
Venom/: CMakeLists.txt  plugin.cpp
Venom/patches/: VCO LAB.vcv  VCOLAB.yml
Vostok/: CMakeLists.txt  plugin-mm.json
WordGenerator/: CMakeLists.txt  README.md  plugin-mm.json
chowdsp/: CMakeLists.txt  plugin-mm.json  plugin.cpp
eightfold/: CMakeLists.txt
hetrickcv/: CMakeLists.txt
kocmoc/: CMakeLists.txt  plugin-mm.json
kocmoc/kocmoc-test-patches/: SVF.vcv  SVF.yml
nonlinearcircuits/: CMakeLists.txt
scripts/: SvgToPng.py
